# Combination

./: .env.example  .gitignore  .gitmodules  DIRECT_TREE_UPLOAD_IN_PROGRESS  MATERIALIZE_TRIGGER.txt  Makefile  README.md  combination.lock.json  pyproject.toml  validation-trigger.txt
.bootstrap/: chunk00  chunk01  chunk02  chunk04  chunk05  chunk06  combination-tree.tar.xz
.bootstrap/small/: chunk000  chunk001  chunk002  chunk003  chunk004  chunk005  chunk006  chunk007  chunk008  chunk009  chunk010  chunk011  chunk012  chunk013  chunk014  chunk015  chunk016  chunk017  chunk018  chunk019  chunk020  chunk021  chunk022  chunk023  chunk024  chunk025  chunk026  chunk027  chunk028  chunk029  chunk030  chunk031  chunk032  (+21 more)
docs/: ARCHITECTURE.md  EXPERIMENTS.md  FEATURE_MATRIX.md  LIVE_ONLY_BUILD_PLAN.md  PROVENANCE.md  UPGRADING.md
evidence/: VALIDATION_REPORT.md  archive-junit.xml  best_equity_curves.json  best_trade_logs.json  combination-junit.xml  environment.txt  market_BTC_USD.csv  market_CL_F.csv  market_ES_F.csv  market_ETH_USD.csv  market_GC_F.csv  market_NQ_F.csv  market_matrix.csv  run_metadata.json  scenario_results.json  workflow-outcomes.json
scripts/: archive_market_validation.py  bootstrap.ps1  bootstrap.py  live_market_validation_v2.py  validation_campaign.py
tests/: test_brackets.py  test_broker_catalog.py  test_capabilities.py  test_components.py  test_contracts.py  test_fill_processor.py  test_instruments.py  test_lifecycle.py  test_order_gateway.py  test_positions.py  test_readiness.py  test_risk.py
validation/: README.md  TRIGGER_2026-07-16.md
(+48 files in other folders)
