[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinel-combination"
version = "0.3.0"
description = "Live-only, broker-authoritative multi-asset trading backend derived from Sentinel Chain and Sentinel Iron."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
  "PyYAML>=6.0",
  "ccxt>=4.4",
  "ib-async>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
combination = "sentinel_combination.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
